# generator-python

./: .babelrc  .npmignore  .release-it.json  README.MD  README.md  package.json
__tests__/: base-test.test.js
docs/: v0.0.2.md
generators/app/: index.js
generators/app/templates/: package.json  pyproject.toml
src/: index.js
test/: base-test.test.js
