[tool.poetry]
name = "<%= project_name %>"
version = "0.1.0"
description = "<%= description %>"
authors = ["afeiship <1290657123@qq.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "<%- ctx.underscored(project_name) %>"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
